# stratosphere_v0.0

./: .gitignore  README.md
context_free_grammar/: Makefile  README.md  grammar.cc  grammar.h  main.cc  process_trees.cc
context_free_grammar/scripts/: nbest-sentences.py  nbest-trees.py  split_penn_treebank.py
context_free_grammar/test/: Makefile  grammar_test.cc
core/: cluster.cc  cluster.h  corpus.cc  corpus.h  eigen_helper.cc  eigen_helper.h  evaluate.cc  evaluate.h  features.cc  features.h  hmm.cc  hmm.h  icluster.cc  icluster.h  optimize.cc  optimize.h  pruner.cc  pruner.h  sparsesvd.cc  sparsesvd.h  trees.cc  trees.h  util.cc  util.h
core/test/: Makefile  cluster_test.cc  corpus_test.cc  eigen_helper_test.cc  evaluate_test.cc  features_test.cc  hmm_test.cc  icluster_test.cc  optimize_test.cc  pruner_test.cc  sparsesvd_test.cc  trees_test.cc  util_test.cc
data/lexical/: README
experimental/: ensemble.cc  map_clusters.cc
experimental/bilstmtagging/: bilstmtagger.cpp  bilstmtagger.h  tagger.m.cpp  util.cpp  (+1 more)
experimental/tagging/: CMakeLists.txt  bilstm_tagger.cc  bilstm_tagger.h  tagger.cc  util.cc  util.h
hidden_markov_model/: Makefile  README.md  ensemble.cc  hmm.cc  hmm.h  main.cc  map_clusters.cc
hmm/: Makefile  main.cc
interactive_clustering/: Makefile  README.md  main.cc  main_prune.cc
scripts/: split_even_odd_lines.py
singular/: Makefile  arguments.cc  arguments.h  main.cc  singular.cc  singular.h
word_representation/: Makefile  README.md  main.cc  wordrep.cc  wordrep.h
word_representations/: Makefile  main.cc  wordrep.cc  wordrep.h
(+19 files in other folders)
